--- a/style.css
+++ b/style.css
@@ -136,14 +136,14 @@ input,
 select,
 textarea {
 	color: #667272;
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Courier New', Courier, monospace, sans-serif;
 	font-size: 16px;
 	font-size: 1.6rem;
 	line-height: 1.6;
 }
 h1, h2, h3, h4, h5, h6 {
 	clear: both;
-	font-family: 'Bitter', serif;
+	font-family: 'Crafty Girls', serif;
 	font-weight: normal
 }
 h1 {
@@ -181,7 +181,7 @@ address {
 }
 pre {
 	background: #eee;
-	font-family: "Courier 10 Pitch", Courier, monospace;
+	font-family: 'Courier New', Courier, monospace, sans-serif;
 	font-size: 15px;
 	font-size: 1.5rem;
 	line-height: 1.6;
@@ -502,7 +502,7 @@ a:active {
 	padding: 10rem 0;
 }
 .site-title {
-	font-family: 'Open Sans', sans-serif;
+	font-family: 'Crafty Girls', serif;
 	font-size: 5.2rem;
 	font-weight: 700;
 	line-height: 1.2;
