on with typography, first color test

--- a/style.css
+++ b/style.css
@@ -1330,13 +1330,25 @@ html, body {
 	font-family: 'Courier New', Courier, monospace, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
+h1, h2, h3, h4, h5, h6,
+.site-title
+{
 	font-family: 'Crafty Girls', serif;
 }
+
+a {
+	color: #c30404;
+}
+a:hover,
+a:focus,
+a:active {
+	border-color: #c30404;
+}
+
 /*--------------------------------------------------------------
 9.3 - Layout
 --------------------------------------------------------------*/
+
 /*--------------------------------------------------------------
 9.4 - Design
 --------------------------------------------------------------*/
-
